Fix path to allauth templates, make them extend base.html, and fix scrollwork image (not covering whole div)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,10 +26,10 @@ h6 {
     background-image: 
         url('../images/scroll.svg'), 
         url('../images/parchment.svg');
-    background-repeat: repeat-y, no-repeat;
+    background-repeat: repeat-y, repeat-y;
     background-size: contain, cover; 
     background-position: center, center; 
-    height: 100vh; 
+    min-height: 100vh; 
 }
 
 .journal-center {
